--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </div>
 
     <script>
-        const API_URL = 'http://localhost:5000/api';
+        const API_URL = 'http://44.200.14.34:5000/api';
 
         async function checkBotStatus() {
             try {
